--- a/intex2.html
+++ b/intex2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shivam sogale- RDR2 Portfolio</title>
+  <title>Shivam Sogale - RDR2 Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * {
@@ -159,7 +159,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Shivam sogale</div>
+      <div class="logo">Shivam Sogale</div>
       <ul class="nav-links">
         <li><a href="#welcome">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -174,7 +174,7 @@
     <section id="welcome" class="section" style="animation-delay: 0.2s;">
       <h2>Welcome, Stranger</h2>
       <p>Howdy! I'm <strong>SHIVAM DILIP SOGALE</strong>, a developer on a journey through the digital frontier.</p>
-      <img src="662c0626650e6849730ad661 2.jpg" alt="Your Photo" class="profile-pic" />
+      <img src="shivam.jpg" alt="Shivam Sogale" class="profile-pic" />
       <video controls>
         <source src="intro.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -185,15 +185,15 @@
       <h2>About Me</h2>
       <p><strong>Name:</strong> Shivam Dilip Sogale</p>
       <p><strong>Location:</strong> At.Post Tandulwadi</p>
-      <p><strong>Education:</strong> Pursuing in B.TECH in Electronics and Computer Science </p>
+      <p><strong>Education:</strong> Pursuing B.Tech in Electronics and Computer Science</p>
       <p><strong>Languages:</strong> Marathi, Hindi, and English</p>
     </section>
 
     <section id="achievements" class="section" style="animation-delay: 0.6s;">
       <h2>My Achievements</h2>
       <ul>
-        <li>✅ group project: Land rover with soil moisture sensor</li>
-        <li>📜 Certification in Anudip and jetking</li>
+        <li>✅ Group project: Land rover with soil moisture sensor</li>
+        <li>📜 Certification in Anudip and Jetking</li>
       </ul>
     </section>
 
@@ -202,23 +202,23 @@
       <ul>
         <li>🌵 I aim to become a skilled person</li>
         <li>⚙️ I aim to crack an internship</li>
-        <li>🤠 Crack a good placement </li>
+        <li>🤠 Crack a good placement</li>
       </ul>
     </section>
 
     <section id="personal" class="section" style="animation-delay: 1s;">
-      <h2>personal info</h2>
+      <h2>Personal Info</h2>
       <ul>
-        <li>🎮 <strong>Hobbies:</strong> Gaming, swimming</li>
-        <li>🧠 <strong>Role Models:</strong> elon musk</li>
-        <li>📘 <strong>Favourite Book:</strong> Rich dad poor dad</li>
-        <li>🌐 <strong>Favourite Website:</strong> chatgpt</li>
+        <li>🎮 <strong>Hobbies:</strong> Gaming, Swimming</li>
+        <li>🧠 <strong>Role Models:</strong> Elon Musk</li>
+        <li>📘 <strong>Favourite Book:</strong> Rich Dad Poor Dad</li>
+        <li>🌐 <strong>Favourite Website:</strong> ChatGPT</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Your Name | Walk the line of code and law.
+    &copy; 2025 Shivam Sogale | Walk the line of code and law.
   </footer>
 </body>
 </html>
