--- a/intex2.html
+++ b/intex2.html
@@ -12,6 +12,7 @@
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
+
     body, html {
       height: 100%;
       font-family: 'Cinzel', serif;
@@ -78,7 +79,9 @@
       padding: 30px;
       margin-bottom: 40px;
       box-shadow: 0 0 20px rgba(139,0,0,0.5);
-      animation: fadeSlideUp 1s ease forwards;
+      animation-name: fadeSlideUp;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
       opacity: 0;
       transform: translateY(40px);
     }
