--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <h2>My Achievements</h2>
       <ul>
         <li>✅ group project: Land rover with soil moisture sensor</li>
-        <li>📜 Certification in Anudip and jetking</li>
+        <li>📜 Certification of Anudip and jetking</li>
       </ul>
     </section>
 
